Correctly position planes

--- a/project.json
+++ b/project.json
@@ -15,7 +15,7 @@
   "slug": "",
   "tags": [],
   "image": "assets/social.jpg",
-  "sheets": [],
+  "sheets": ["1ONfaJClEhSASBdKh-79TrU0glLJEA0ZR_f_bdB1jtZI"],
   "production": false,
   "embedded": true
 }
